k8s/ldwizard-erfgoedwizard/ldwizard-erfgoedwizard-service.yml
apiVersion: v1
kind: Service
metadata:
  name: ldwizard-erfgoedwizard
spec:
  ports:
    - port: 80
      targetPort: 80
  selector:
    app: ldwizard-erfgoedwizard
