k8s/ldwizard-erfgoedwizard/ldwizard-erfgoedwizard-ingress.yml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: ldwizard-erfgoedwizard
  annotations:
    kubernetes.io/ingress.class: nginx
    cert-manager.io/cluster-issuer: letsencrypt
spec:
  tls:
    - hosts:
        - ldwizard.netwerkdigitaalerfgoed.nl
      secretName: ldwizard-tls
  rules:
    - host: ldwizard.netwerkdigitaalerfgoed.nl
      http:
        paths:
          - backend:
              serviceName: ldwizard-erfgoedwizard
              servicePort: 80
